Changelog
=========

2.5 (unreleased)
----------------

- removed import from zope.app [gborelli]
- removed dependency on shapely, depend on pygeoif instead, fallback to shapely if installed [nan]
- Changed coordinates edit form in order to make it more user friendly [gborelli]
- Fixed wrongly open div tag in the geoshapeform.pt [rnd0101]
- Added German translation [Denis Krienbühl]


2.4 (2012-02-14)
----------------

- Allowed to remove coordinates from a content type [gborelli, mircoangelini]
- Added French translation [Fabien Moret]
- Added Danish translation [stonor]


0.2.3 (2011-09-05)
------------------
- Changed javascript to bind window load event to create map. It fixes #29 [gborelli]
- Show our default fieldset first on coordinates field in accordance with
  changes in plone.app.z3cform 0.5.0+.
  [davidjb]
- Added custom width/height fields for map sizing to the custom styles form.
  This requires the relevant new fields of 'map_width' and 'map_height' from
  the interfaces specified in collective.geo.settings.
  [davidjb]
- Added support for Spanish localization [macagua]
- Added improvements about the Internationalization [macagua]
- Made testing output more verbose in the case of errors when using the
  test browser.
  [davidjb]
- Added plone.testing as a extra requirements for testing
  [davidjb]
- Made geo feature styles more flexible through common style field definition
  and proxying any calls for style attributes against our style manager
  [davidjb]
- added map_viewlet_position in custom style form [gborelli]
- plone 4.1 fixes [gborelli]
- added z3c.autoinclude entry point [gborelli]
- Normalising CSV and WKT abbreviations throughout the package [davidjb]


0.2.2 (2010-12-28)
------------------

- removed IGeoView [gborelli]
- Added dutch translations [robgietema]


0.2.1 (2010-11-13)
------------------

- geocoding javascript refactoring
- added translations


0.2 (2010-10-31)
----------------
