@@ -4,8 +4,10 @@ Changelog
 2.5 (unreleased)
 ----------------
 
-- removed import from zope.app [gborelli]
-- removed dependency on shapely, depend on pygeoif instead, fallback to shapely if installed [nan]
+- Moved reindexDocSubscriber from collective.geo.geographer [gborelli]
+- Changed reindexDocSubscriber to reindexStylesSubscriber [gborelli]
+- Removed import from zope.app [gborelli]
+- Removed dependency on shapely, depend on pygeoif instead, fallback to shapely if installed [nan]
 - Changed coordinates edit form in order to make it more user friendly [gborelli]
 - Fixed wrongly open div tag in the geoshapeform.pt [rnd0101]
 - Added German translation [Denis Krienbühl]
